# pdf_combiner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  combine_pdfs.py  combine_pdfs_enhanced.py  config.example.yaml  pdf_combiner_config.yaml  requirements.txt  setup.sh
pdf_combiner_pro/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  config.example.yaml  pyproject.toml
pdf_combiner_pro/.github/workflows/: ci.yml
pdf_combiner_pro/examples/: __init__.py  advanced_usage.py  basic_usage.py
pdf_combiner_pro/pdf_combiner/: __init__.py  __version__.py  cli.py  config.py  converters.py  exceptions.py  merger.py  models.py  ocr.py  utils.py  validators.py
pdf_combiner_pro/tests/: __init__.py  conftest.py  test_cli.py  test_merger.py  test_utils.py  test_validators.py
test_files/: test1.txt  test2.txt
